--- a/DeviceParts/res/values-pt-rBR/strings.xml
+++ b/DeviceParts/res/values-pt-rBR/strings.xml
@@ -18,49 +18,49 @@
 
 <resources>
     <string name="advanced_settings">Device Parts</string>
-    <string name="advanced_settings_summary">Configurações adicionais</string>
-    
-    <string name="display_title">Display</string>
-    
+    <string name="advanced_settings_summary">Configurações específicas do aparelho</string>
+
+    <string name="display_title">Tela</string>
+
     <!-- Mi Note 3 Settings -->
-    <string name="jason_pref_title">Configurações do dispositivo</string>
-    <string name="jason_pref_summary">Configurações adicionais do Mi Note 3</string>
-		
-    <!-- KCal --> 
-    <string name="device_kcal_title">Exibir Calibração de Cores</string>
-    
+    <string name="jason_pref_title">Configurações do Aparelho</string>
+    <string name="jason_pref_summary">Configurações extras do Mi Note 3</string>
+
+    <!-- KCal -->
+    <string name="device_kcal_title">Calibração de cores da tela</string>
+
     <!-- Notification LED brightness -->
-    <string name="notification_title">Notificações LED</string>
-    <string name="notification_led_title">Brilho do LED</string>
+    <string name="notification_title">LED de notificação</string>
+    <string name="notification_led_title">Brilho do LED de notificação</string>
 
     <!-- Ambient Display -->
     <string name="ambient_display">Tela Ambiente</string>
-    <string name="advanced_doze_summary">Tela ambiente configurações adicionais</string>
-    
-    <string name="vibration_title">Feedback Tátil</string>
-    <string name="vibration_strength_title">Força</string>
-    
+    <string name="advanced_doze_summary">Configurações específicas de gestos da tela Ambiente</string>
+
+    <string name="vibration_title">Retorno de vibração</string>
+    <string name="vibration_strength_title">Intensidade</string>
+
     <!-- Thermal Profiles -->
-    <string name="thermal_profile_title">Térmico</string>
-    <string name="thermal_title">Configurações térmica</string>
-    <string name="thermal_summary">Escolha seu perfil Térmico</string>
-    <string name="thermal_dialogTitle">Escolha seu perfil Térmico</string>
-    
+    <string name="thermal_profile_title">Temperatura</string>
+    <string name="thermal_title">Configurações de temperatura</string>
+    <string name="thermal_summary">Permite escolher o perfil de Temperatura adotado pelo aparelho</string>
+    <string name="thermal_dialogTitle">Escolha o perfil de Temperatura</string>
+
     <!-- Values for Thermal Presets -->
-    <string name="thermal_performance">Performance</string>
+    <string name="thermal_performance">Desempenho</string>
     <string name="thermal_battery">Bateria</string>
-    <string name="thermal_gaming">Jogo</string>
-    <string name="thermal_balance">Equilibrado</string>
+    <string name="thermal_gaming">Jogos</string>
+    <string name="thermal_balance">Balanceado</string>
     <string name="thermal_extreme_battery">Bateria Extrema</string>
 
     <!-- kcal -->
-    <string name="advanced_settings_kcal">Exibir Calibração de Cores</string>
+    <string name="advanced_settings_kcal">Calibração de cores da tela</string>
     <string name="cat_colormanagement">Configurações de cor</string>
-    <string name="cat_calibration">Calibração da Tela</string>
+    <string name="cat_calibration">Calibração da tela</string>
 
-    <string name="kcal_enabled">Ligado</string>
-    <string name="kcal_disabled">Desligado</string>
-    <string name="set_on_boot">Definir na inicialização</string>
+    <string name="kcal_enabled">Ativado</string>
+    <string name="kcal_disabled">Desativado</string>
+    <string name="set_on_boot">Ativar ao inicializar</string>
     <string name="color_red">Vermelho</string>
     <string name="color_green">Verde</string>
     <string name="color_blue">Azul</string>
@@ -68,34 +68,53 @@
     <string name="saturation">Saturação</string>
     <string name="value">Valor</string>
     <string name="contrast">Contraste</string>
-    <string name="hue">Tonalidade</string>
-    <string name="grayscale">Tela em tom cinza</string>
+    <string name="hue">Matiz</string>
+    <string name="grayscale">Tela em escala de cinza</string>
 
-    <string name="presets_dialog_title">Selecione a predefinição</string>
-
+    <string name="presets_dialog_title">Selecionar perfil</string>
     <!-- Presets -->
     <string name="preset_default">Padrão</string>
     <string name="preset_version_1">Versão 1</string>
     <string name="preset_version_2">Versão 2</string>
     <string name="preset_version_3">Versão 3</string>
     <string name="preset_triluminous">Triluminoso</string>
-    <string name="preset_deep_black_white">Preto profundo e branco</string>
-    <string name="preset_deep_natural">Natural Profundo</string>
-    <string name="preset_cool_amoled">Amoled Legal</string>
-    <string name="preset_extreme_amoled">Amoled Extremo</string>
+    <string name="preset_deep_black_white">Branco e preto profundo</string>
+    <string name="preset_deep_natural">Natural profundo</string>
+    <string name="preset_cool_amoled">Amoled padrão</string>
+    <string name="preset_extreme_amoled">Amoled extremo</string>
     <string name="preset_warm_amoled">Amoled Quente</string>
-    <string name="preset_hybrid_mamba">Hybrid Mamba</string>
+    <string name="preset_hybrid_mamba">Mamba Híbrida</string>
 
-    <string name="hall_wakeup_title">Ligar a tela com Flip Cover</string>
-    <string name="hall_title">Ativar ligar a tela com Flip Cover</string>
-    <string name="hall_wakeup_summary">Ligar a tela através do Flip Cover magnético</string>
-    
+    <string name="hall_wakeup_title">Flip Cover</string>
+    <string name="hall_title">Ativar a tela com Flip Cover</string>
+    <string name="hall_wakeup_summary">Ativa a tela ao usar uma Flip Cover magnética</string>
     <!-- menu -->
     <string name="kcal_presets">@string/presets_dialog_title</string>
     <string name="kcal_reset">Redefinir</string>
-    
+
     <!-- CustomSeekBarPreference -->
-    <string name="edit_value">Escolha um novo valor</string>
-    <string name="default_value">Valor Padrão</string>
-    <string name="edit_hint">Valor entre %1$d e %2$d</string>  
+    <string name="edit_value">Escolher novo valor</string>
+    <string name="default_value">Valor padrão</string>
+    <string name="edit_hint">Valor entre %1$d e %2$d</string>
+
+    <!-- FPS Info -->
+    <string name="fps_info_title">Mostrar FPS</string>
+    <string name="fps_info_summary">Mostra os quadros por segundo sobrepostos na tela</string>
+    
+    <!-- Audio amplification -->
+    <string name="audio_amplify">Amplificar audio</string>
+    <string name="headphone_gain">Ganho do headphone</string>
+    <string name="mic_gain">Ganho do microfone</string>
+    
+    <!-- Selinux Switch -->
+    <string name="selinux_explanation_summary">SELinux é um conjunto de modificações do kernel e ferramentas do Espaço de Usuário. Alterar essas modificações pode causar resultados indesejáveis. Use por sua conta e risco. (As seguintes opções ficarão expostas se o SU não for encontrado!).</string>
+    <string name="selinux_category">SELinux</string>
+    <string name="selinux_mode_title">Modo do SELinux</string>
+    <string name="selinux_permissive_summary">Permissive</string>
+    <string name="selinux_enforcing_summary">Enforcing</string>
+    <string name="selinux_persistence_title">Persist across reboot</string>
+    <string name="selinux_persistence_summary">Restaure a SEPolicy definida acima em cada inicialização</string>
+    <string name="selinux_permissive_toast_title">SELinux alterado para permissive!</string>
+    <string name="selinux_enforcing_toast_title">SELinux alterado para enforcing!</string>
+    <string name="cannot_get_su">Falha devido a falta de acesso ao super usuário</string>
 </resources>
